2014-08-12  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: No more "welcome to Pandora FMS 5.0" 
	removed version code to allow the same text for next releases
	:-)

2014-08-11  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/help/clippy/godmode_agentes_modificar_agente.php,
	include/help/clippy/homepage.php,
	include/help/clippy/godmode_agentes_configurar_agente.php,
	include/functions_clippy.php: wip in the clippy.

2014-08-11  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/agentes/agent_template.php: Fixed bug in FF
	threshold to apply a template module. Ticket #871.

2014-08-11  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/agentes/agent_conf_gis.php: Altitude coordinate by
	default. Fixed bug #766.

2014-08-08  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions.php,
	include/help/clippy/godmode_agentes_modificar_agente.php,
	include/help/clippy/homepage.php,
	include/help/clippy/godmode_agentes_configurar_agente.php,
	include/javascript/intro.js,
	include/javascript/introjs.css,
	include/javascript/clippy.js,
	include/functions_ui.php,
	include/functions_clippy.php,
	index.php,
	general/header.php: first version of the new feature a annoying
	clippy such as the lovely micro$oft mascot.

2014-08-07  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* pandoradb.sql,
	  extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql,
	  extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql,
	  extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql:
	Modified the decimal precision of the column "post_process"
	for the table 'tagente_modulo' (Ticket #1124).

2014-08-06  Sancho Lerena <slerena@artica.es>

	* extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql,
	pandoradb.sql: Fixed bug introduced in commit 9604
	altering tagente_modulo.post_process double precission
	making conversion from bytes to megabytes impossible
	(0,00000095367432). Pending to fix also the interface for
	module creation/edition which also fails. This is critical 
	for SP1 release :(
