@@ -1,3 +1,9 @@
+2014-08-12  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* general/header.php, godmode/setup/setup_general.php,
+	include/functions_clippy.php, include/functions_config.php,
+	include/help/clippy/homepage.php: wip in the clippy.
+
 2014-08-12  Sancho Lerena <slerena@artica.es>
 
 	* pandoradb_data.sql: No more "welcome to Pandora FMS 5.0" 
